Cambiar las comas (,) por puntos (.) en los datos. Eliminar el precio en el pedido sugerido. Eliminar un cliente adicional en el pedido sugerido. En "Movimientos", cambiar el título de "Ingreso - Egresos" en el dashboard y también en la sección correspondiente. Redirigir al login cuando se descargue el inventario. Cambiar el "precio" por "costo" en el inventario, ya que todos los movimientos se realizan a nivel de costo. En el inventario, cambiar "producto" por "producto y agregar talla". Cambiar la opción "descargar inventario" por "factura física". Cambiar "continuar en la venta" por "factura electrónica". Agregar el número de ítems en la venta.

--- a/src/app/components/inventories/inventarios-pedido/inventarios-pedido.component.html
+++ b/src/app/components/inventories/inventarios-pedido/inventarios-pedido.component.html
@@ -118,8 +118,15 @@
             <br><br><br>
             <div class="icon-container">
                 <fa-icon [icon]="faBoxes" [size]="'3x'" style="color: #7e94d1" class="icono-input2"></fa-icon>
-                <label for="total" class="label-input2">TOTAL DE PRODUCTOS:</label>
+                <label for="total" class="label-input2">TOTAL DE ITEMS:</label>
                 <input type="text" [(ngModel)]="totalRegistros" class="cool-input resultado-input" readonly>
+            </div>
+            <br><br><br>
+
+            <div class="icon-container">
+                <fa-icon [icon]="faBoxes" [size]="'3x'" style="color: #7e94d1" class="icono-input2"></fa-icon>
+                <label for="total" class="label-input2">TOTAL DE PRODUCTOS:</label>
+                <input type="text" [(ngModel)]="totalProductos" class="cool-input resultado-input" readonly>
             </div>
             <br><br>
         </div>
