--- a/src/app/components/sales/menuvent/menuvent.component.html
+++ b/src/app/components/sales/menuvent/menuvent.component.html
@@ -141,6 +141,18 @@
                             </tr>
                         </tbody>
                     </table>
+                    <!-- Total de items agregados un texto pequeño -->
+                    <div class="icon-container">
+                        <label *ngIf="lstDetalleMovimientos.length > 0" for="total" class="label-input" style="font-size: 14px;">
+                            Total de items agregados: {{lstDetalleMovimientos.length}}
+                          </label>
+                          
+                    </div>
+
+                    
+                        
+
+
                 </div>
             </div>
             <br>
