Solucion consumidor  final creando en terceros

--- a/src/app/components/movements/movimientos/movimientos.component.html
+++ b/src/app/components/movements/movimientos/movimientos.component.html
@@ -78,7 +78,7 @@
                     <th style="width: 5%; ">TIPO</th>
                     <th style="width: 5%; ">CANTIDAD</th>
                     <th style="width: 5%; ">VALOR TOTAL</th>
-                    <th style="width: 10%; ">COSTO</th>
+                    <th style="width: 10%; ">COSTO / PRECIO</th>
                     <th style="width: 15%; ">DOCUMENTO</th>
 
                 </tr>
