--- a/src/app/components/orders/pedido-sugerido/pedido-sugerido.component.html
+++ b/src/app/components/orders/pedido-sugerido/pedido-sugerido.component.html
@@ -4,7 +4,7 @@
         <div class="card-header">
             <div class="row mx-3">
                 <fa-icon [icon]="faUserFriends" [size]="'3x'" style="color: #636363;"></fa-icon>
-                <h1 class="mx-5 " style="color: #636363;">Inventarios</h1>
+                <h1 class="mx-5 " style="color: #636363;">Pedido Sugerido</h1>
                 <div style="position: absolute;right:0;" class="mx-3">
                     <a class="btn btn-secondary " (click)="pedidosugerido(lstInventarios)"
                         style=" border-radius: 5px; 
