--- a/src/app/components/navegation-cl/navegation-cl.component.html
+++ b/src/app/components/navegation-cl/navegation-cl.component.html
@@ -52,6 +52,12 @@
                 </a>
                 -->
             </div>
+            <a mat-list-item style="color: white" [routerLink]="[{ outlets: { contentClient: ['estado-facturas'] } }]"
+            (click)="closeSidenavIfSmallScreen(drawer)"
+            >
+                <span class="material-icons-outlined" style="font-size: 20px">monetization_on</span>
+                <font style="font-size: 12px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Estado de Facturas</font>
+            </a>
             <a mat-list-item style="color: white" [routerLink]="[{ outlets: { contentClient: ['cuadre-caja'] } }]"
             (click)="closeSidenavIfSmallScreen(drawer)"
             >
