--- a/src/app/components/estado-facturas/estado-facturas.component.html
+++ b/src/app/components/estado-facturas/estado-facturas.component.html
@@ -8,30 +8,22 @@
                 <h1 class="mx-5 " style="color: #636363;">Facturas</h1>
             </div>
         </div>
-        <div class="card-body">
-            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
-                <thead style="color: #636363;">
-                    <tr>
-                        <th style="width: 10%; ">Código de Movimiento</th>
-                        <th style="width: 10%; ">Factura</th>
-                        <th style="width: 10%; ">Clave de acceso</th>
-                        <th style="width: 20%; "></th>
-                        <th style="width: 20%; "></th>
-                        <th style="width: 20%; "></th>
-                    </tr>
-                </thead>
-                <tbody style="color: #767695;">
-                    <tr *ngFor="let movimientos of lstMovimientos">
-                        <td>{{movimientos.id}}</td>
-                        <!-- <td>{{movimientos.}}</td>
-                        <td>{{movimientos.clave_acceso}}</td>
-                        <td>
-                            <fa-icon [icon]="faEdit" class="btn btn-info" [size]="'sm'" style="margin-right: 5px;" data-placement="bottom" title="Editar Almacen" (click)="editarAlmacenes(almacen)"></fa-icon>
-                        </td>
-                        -->
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover" id="dtdt">
+            <thead style="color: #636363;">
+                <tr>
+                    <th style="width: 10%; ">ID Producto</th>
+                    <th style="width: 10%; ">Producto</th>
+                    <th style="width: 10%; ">Cantidad</th>
+                  
+                </tr>
+            </thead>
+            <tbody style="color: #767695;">
+                <tr *ngFor="let detalleMovimientos of lstMovimientos; let i = index">
+                    <td>{{detalleMovimientos.id}}</td>
+                    <td>{{detalleMovimientos.nroFactura}}</td>
+                    <td>{{detalleMovimientos.clave_acceso}}</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
