--- a/src/app/components/navegation-cl/navegation-cl.component.html
+++ b/src/app/components/navegation-cl/navegation-cl.component.html
@@ -117,6 +117,12 @@
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Descuentos</font>
             </a>
 
+            
+            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['descuentos'] } }]" style="color: white"  (click)="closeSidenavIfSmallScreen(drawer)">
+                <span class="material-icons-outlined" style="font-size: 24px">description</span>
+                <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Facturas</font>
+            </a>
+
             <a mat-list-item (click)="logout()" style="color: white" (click)="closeSidenavIfSmallScreen(drawer)">
                 <span class="material-icons-outlined" style="font-size: 24px">logout</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Salir</font>
