--- a/src/app/components/inventories/inventarios-productos/inventarios-productos.component.html
+++ b/src/app/components/inventories/inventarios-productos/inventarios-productos.component.html
@@ -11,7 +11,7 @@
 
         </div>
         <div class="card-body ">
-            <table datatable [dtOpetions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover" id="dtdt" >
+            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover" id="dtdt" >
                 <thead style="color: #636363;">
                     <tr>
                         <th style="width: 20%; ">Nombre</th>
