--- a/src/app/components/estado-facturas/estado-facturas.component.html
+++ b/src/app/components/estado-facturas/estado-facturas.component.html
@@ -1,4 +1,4 @@
-<div style="max-width: 95%;margin: auto;">
+<div style="max-width: 95%;margin: auto;overflow-x: auto;">
     <div class="card">
         <br />
         <div class="card-header d-flex justify-content-between align-items-center">
@@ -8,7 +8,7 @@
             </div>
         
             <!-- Boton para nueva factura en el ultimo almacen -->
-            <button mat-icon-button (click)="nuevaFactura()"
+            <button mat-raised-button (click)="nuevaFactura()"
                 style="background-color: #636363; color: white; margin-right: 20px;"
             >
                 Nueva Factura
