--- a/src/app/components/users/configuracion/configuracion.component.html
+++ b/src/app/components/users/configuracion/configuracion.component.html
@@ -22,6 +22,14 @@
                     <a class="btn btn-info" (click)="onPass()">Ver Perfil</a>
                 </div><br>
                 <form [formGroup]="corporationForm">
+                    <div class="form-group">
+                        <label for="checkbox" style="font-size: 14px;">Acepto los términos de uso</label>
+                        <br>
+                        <input type="checkbox" id="checkbox" formControlName="checkbox" checked [disabled]="true" />
+                        <small style="display: block; margin-top: 10px; color: grey;">
+                            Al crear y acceder a su perfil de usuario de la aplicación “Atiendo”, autorizo a Plasticaucho Industrial S.A. a utilizar los datos personales que se generen en la misma, para la administración y análisis de la información de la aplicación, para lo cual se proporcionará las medidas técnicas, humanas y administrativas que sean necesarias para otorgar seguridad a los datos personales.
+                        </small>
+                    </div>
                     <div align="center">
                         <h5 class="title">CERTIFICADOS DIGITALES</h5>
                     </div>
